# entso-e-scraper

./: README.md  get_data.py  pyproject.toml
src/: scraper.py
